logger and exception

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "automated-research-report-generation"
+name = "automated_research_report_generation"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -15,3 +19,10 @@ dependencies = [
     "tavily-python==0.7.12",
     "wikipedia==1.4.0",
 ]
+
+# Optional: authors, license
+authors = [{ name = "Aniruddha Mohanty" }]
+license = { text = "Proprietary" }
+
+[tool.setuptools.packages.find]
+where = ["research_and_analyst"]
